--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,24 @@
   box-sizing: border-box;
 }
 
+.forecast {
+  display: flex;
+}
+
+.forecast-deepdive {
+  width: 100%;
+}
+
 .forecast-header {
   display: flex;
   justify-content: space-between;
-  padding: 50px 0;
+  padding: 20px 0;
 }
 
 .forecast-days {
+  width: 100%;
   display: flex;
+  flex-direction: column;
+  margin: 20px;
+  box-shadow: 0 0 5px 5px rgba(0,0,0,0.3);
 }
