--- a/src/Day.css
+++ b/src/Day.css
@@ -1,5 +1,6 @@
-.day {
-  width: 200px;
-  height: 200px;
-  background-color: gray;
+.day-row {
+  display: flex;
+  height: 50px;
+  justify-content: space-evenly;
+  align-items: center;
 }
