--- a/src/LocationSelector.css
+++ b/src/LocationSelector.css
@@ -2,4 +2,10 @@ select {
   font-size: 20px;
   padding: 5px;
   border-radius: 5px;
+  background: none;
+  border: none;
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  outline: none;
 }
